[project]
name = "biomedmcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "flask>=3.1.0",
    "flask-jsonrpc>=3.0.1",
    "jsonrpcclient>=4.0.3",
    "mcp[cli]>=1.6.0",
    "ollama>=0.4.7",
    "requests>=2.32.3",
]
